drag and drop fix on mobile

--- a/style.css
+++ b/style.css
@@ -195,6 +195,10 @@ nav {
     cursor: pointer;
     border-radius: var(--radius);
     transition: 0.2s ease;
+    -webkit-touch-callout: none;
+    -webkit-user-select: none;
+    user-select: none;
+    touch-action: none;
 }
 
 .hover-image:hover {
